...
}

extension ConfirmationTypeDetails on ConfirmationType {
  String get confirmLabel => switch (this) {
        ConfirmationType.delete => 'Delete',
        ConfirmationType.logout => 'Sign out',
        ConfirmationType.discardChanges => 'Discard changes',
        ConfirmationType.resetPassword => 'Reset password',
        ConfirmationType.lockUser => 'Lock user',
        ConfirmationType.unlockUser => 'Unlock user',
        ConfirmationType.custom => 'Confirm',
      };

...
